--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src="air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">2500ETB</h2>
+                <h2 class="sliderPrice">119$</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -50,7 +50,7 @@
                 <img src="jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR JORDAN</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">2800ETB</h2>
+                <h2 class="sliderPrice">149$</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -59,7 +59,7 @@
                 <img src="blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">BLAZER</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">3700ETB</h2>
+                <h2 class="sliderPrice">109$</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -68,7 +68,7 @@
                 <img src="crater.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">CRATER</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">3500ETB</h2>
+                <h2 class="sliderPrice">129$</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -77,7 +77,7 @@
                 <img src="hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">HIPPIE</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$3750ETB</h2>
+                <h2 class="sliderPrice">99$</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -112,7 +112,7 @@
         <img src="air.png" alt="" class="productImg">
         <div class="productDetails">
             <h1 class="productTitle">AIR FORCE</h1>
-            <h2 class="productPrice">4500ETB</h2>
+            <h2 class="productPrice">450$</h2>
             <p class="productDesc">
 
 
@@ -131,7 +131,7 @@
         <div class="payment">
             <h1 class="payTitle">Personal Information</h1>
             <label>Name and Surname</label>
-            <input type="text" placeholder="John Doe" class="payInput">
+            <input type="text" placeholder="" class="payInput">
             <label>Phone Number</label>
             <input type="text" placeholder="+1 234 5678" class="payInput">
             <label>Address</label>
@@ -217,7 +217,7 @@
             <div class="footerRightMenu">
                 <h1 class="fMenuTitle">Subscribe to our newsletter</h1>
                 <div class="fMail">
-                    <input type="text" placeholder="your@email.com" class="fInput">
+                    <input type="text" placeholder="your email@gmail.com" class="fInput">
                     <button class="fButton">Join!</button>
                 </div>
             </div>
